Fixed dropdown boxes sometimes not aligning properly

--- a/cs/index.css
+++ b/cs/index.css
@@ -79,5 +79,5 @@ select {
 }
 
 form {
-	overflow: visible;
+	overflow: hidden;
 }
